--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 
-html{font-family:'Space Mono',monospace;width:100%;height:100%;display:flex;justify-content:center;align-items:center;flex-direction:column}
-/* body, div, p {
-    font: 400 14px/22px Roboto,sans-serif;
-} */
+.cell-top {
+    vertical-align: top;
+}
+html{font-family:'Space Mono',monospace;width:100%;height:100%;display:flex;text-align:center;justify-content:center;align-items:center;flex-direction:column}
 canvas, img, video {
     border: 1px solid black;
 }
 td {
-    padding: 10px 0px 0px 10px;
+    padding: 5px 0px 0px 5px;
     text-align: center;
 }
 button {
@@ -43,30 +43,11 @@ button[disabled] {
 .control {
     margin-bottom: 3px;
 }
-.err {
-    color: red;
-    font-weight: bold;
-}
 .caption {
     margin: 0;
     font-weight: bold;
 }
-.code {
-    padding: 4px 6px;
-    margin: 4px 8px 4px 2px;
-    background-color: #FBFCFD;
-    border: 1px solid #C4CFE5;
-    font-family: monospace, fixed;
-    font-size: 13px;
-    min-height: 13px;
-    line-height: 1.0;
-    text-wrap: unrestricted;
-    padding-bottom: 0px;
-    margin: 0px;
-}
 .hidden {
     display: none;
 }
-.small {
-    max-width: 300px;
-}
+
